--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="title_home">Home</string>
     <string name="title_top_rated">Top rated</string>
     <string name="title_favorites">Favorites</string>
+
+    <string name="no_connection">No internet connection</string>
+    <string name="try_again">Please try again</string>
 </resources>
