--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
 
     <string name="no_connection">No internet connection</string>
     <string name="try_again">Please try again</string>
+    <string name="what_are_you_looking_for">What are you looking for?</string>
+    <string name="search_movies">Search movies</string>
+    <string name="now_playing">Now playing</string>
 </resources>
