--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="what_are_you_looking_for">What are you looking for?</string>
     <string name="search_movies">Search movies</string>
     <string name="now_playing">Now playing</string>
+    <string name="search">Search</string>
 </resources>
