--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="search_movies">Search movies</string>
     <string name="now_playing">Now playing</string>
     <string name="search">Search</string>
+    <string name="add_to_favorites">Add to favorites</string>
+    <string name="genres">Genres</string>
 </resources>
