--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="search">Search</string>
     <string name="add_to_favorites">Add to favorites</string>
     <string name="genres">Genres</string>
+    <string name="in_fav">In favorites</string>
 </resources>
