--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="add_to_favorites">Add to favorites</string>
     <string name="genres">Genres</string>
     <string name="in_fav">In favorites</string>
+    <string name="empty_favorites">Empty favorites</string>
+    <string name="empty">Empty</string>
 </resources>
